# booking-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
migrations/postgres/: 20251130000000_add_event_overrides.sql  20251201000000_auth_tokens.sql  20251203000000_add_notice_rules.sql  20251204000000_add_labels.sql  20251205000000_add_sessions.sql  20251207000000_add_booking_management.sql  20251208000000_communication_engine.sql  20251211000000_add_event_id_to_templates.sql  20251213000000_fix_label_payout_type.sql  (+1 more)
src/: background.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
tests/: common.rs  integration_test_api.rs  integration_test_availability.rs  integration_test_bitmask.rs  integration_test_booking.rs  integration_test_booking_constraints.rs  integration_test_booking_management.rs  integration_test_comprehensive_mail.rs  integration_test_dst_edge_case.rs  integration_test_email_campaign.rs  integration_test_email_idempotency.rs  integration_test_event_boundaries.rs  integration_test_event_templates.rs  integration_test_extended.rs  integration_test_jobs_and_logs.rs  integration_test_labels.rs  integration_test_labels_campaigns.rs  integration_test_manual_sessions.rs  integration_test_notice_policy.rs  integration_test_overrides.rs  integration_test_overrides_capacity.rs  integration_test_past_filtering.rs  integration_test_specific_boundary.rs  integration_test_template_versioning.rs  integration_test_tenant_management.rs  integration_test_timezones.rs  integration_test_today_availability.rs  integration_tests.rs  job_queue_concurrency_test.rs
(+98 files in other folders)
