[package]
name = "booking-backend"
version = "0.1.1"
authors = ["Tobias Friedrich tobias.friedrich@student.kit.edu"]
edition = "2024"
default-run = "booking-backend"
readme = "README.md"
license = "AGPL-3"

[dependencies]
tikv-jemallocator = "0.6.1"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors"] }
tower-cookies = "0.11.0"
time = "^0.3.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
thiserror = "2.0.17"
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
base64 = "0.22.1"
rand = "0.8.5"
governor = "0.10.2"
nonzero_ext = "0.3.0"
hdrhistogram = "7.5.4"
colored = "3.0.0"
icalendar = "0.17.5"
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
tera = "1.20.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
mrml = "5.1.0"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.8.1"
mime = "0.3.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true